# Stream-Gate

./: .gitignore  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  ELECTRON_TO_TAURI_MIGRATION.md  LICENSE  LOCAL_TESTING_GUIDE.md  MIGRATION_PROGRESS.md  PROJECT_STRUCTURE.md  README-EN.md  README-FA.md  README.md  RELEASE.md  TROUBLESHOOTING.md  index.html  main.js  main.js.backup  migration_issues.md  package-lock.json  package.json
.github/workflows/: ci.yml  mirror-releases.yml  release.yml  tauri-release.yml
assets/icons/: icon.icns
docs/: ARCHITECTURE.md  FEATURES.md  STYLE_GUIDE.md  app.js  index.html  style.css
docs/concepts/: Architecture.md  Quic.md  SOCKS5.md  Slipstream.md
scripts/: dns-scanner-worker.js  download-binaries.js  generate-icons.js  sign-mac.sh  verify-binaries.js
services/business/: DNSService.js  DnsResolutionService.js  ProcessManager.js  ProxyService.js
services/core/: EventEmitter.js  Logger.js
services/data/: SettingsService.js
services/infrastructure/: WindowService.js
services/orchestration/: ConnectionService.js
services/presentation/: IPCController.js
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  connection.rs  dns.rs  mod.rs  proxy.rs  settings.rs  utility.rs
src-tauri/src/services/: connection.rs  dns_resolution_service.rs  dns_service.rs  log_service.rs  mod.rs  process_manager.rs  proxy_service.rs  settings.rs  settings_test.rs  system_proxy.rs
src/start-main/: main.js  main.ts  tsconfig.json
src/start-main/utils/: SystemProxyChecker.ts
src/start-renderer/: index.html  package-lock.json  package.json  vite.config.ts
src/start-renderer/src/: App.tsx  index.css  store.ts
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  store.ts
(+91 files in other folders)
